--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,4 @@ language: objective-c
 osx_image: xcode7.3
 xcode_project: AppVersion.xcodeproj
 xcode_scheme: AppVersion
-xcode_sdk: iphonesimulator9.2
+xcode_sdk: iphoneos9.3
